--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_3.tex
@@ -1469,143 +1469,214 @@ Es el proceso contrario a desdoblar. Si una expresión $w$ tiene de forma consec
     \end{tikzpicture}
 \end{figure}
 
-\begin{ejemplo}
-    Consideramos la presentación $\cc{P} = \{a,b,c\ ; a^{-1}cb,\ ac^{-1}b^{-1}\}$. Veamos qué superficie $|\cc{P}|$ tiene asociada. De la presentación podemos obtener los triángulos $w_1=a^{-1}cb$ y $w_2=ac^{-1b^{-1}}$.
-    \begin{figure}[H]
-        \centering
-        \begin{tikzpicture}
-            \shorthandoff{>}
-            
-            \begin{scope}[shift={(-2,0)}]
-                % Triángulo
-                \draw[thick] (1,1.5) -- (0,0); %1
-                \draw[thick] (0,0) -- (2,0); %2
-                \draw[thick] (2,0) -- (1,1.5); %3
+\begin{ejemplo}\ 
+    \begin{enumerate}
+        \item Consideramos la presentación $\cc{P} = \{a,b,c\ ; a^{-1}cb,\ ac^{-1}b^{-1}\}$. Veamos qué superficie $|\cc{P}|$ tiene asociada. De la presentación podemos obtener los triángulos $w_1=a^{-1}cb$ y $w_2=ac^{-1b^{-1}}$.
+        \begin{figure}[H]
+            \centering
+            \begin{tikzpicture}
+                \shorthandoff{>}
+                
+                \begin{scope}[shift={(-2,0)}]
+                    % Triángulo
+                    \draw[thick] (1,1.5) -- (0,0); %1
+                    \draw[thick] (0,0) -- (2,0); %2
+                    \draw[thick] (2,0) -- (1,1.5); %3
+
+                    % Leyenda
+                    \node[label=left:{$a^{-1}$}] at (0.5,0.73) {}; %1
+                    \node[label=below:{$c$}] at (1, 0) {}; %2
+                    \node[label=right:{$b$}] at (1.5, 0.73) {}; %3
+
+                    % Flechas
+                    \draw[<-, thick] (0.5,0.73) ++(0, 0.01) -- ++(-0.01,-0.01); %1
+                    \draw[->, thick] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
+                    \draw[->, thick] (1.5,0.73) ++(0, -0.01) -- ++(-0.01,0.01); %3
+                \end{scope}
+
+                \begin{scope}[shift={(2,0)}]
+                    % Triángulo
+                    \draw[thick] (1,1.5) -- (0,0); %1
+                    \draw[thick] (0,0) -- (2,0); %2
+                    \draw[thick] (2,0) -- (1,1.5); %3
+
+                    % Leyenda
+                    \node[label=left:{$a$}] at (0.5,0.73) {}; %1
+                    \node[label=below:{$c^{-1}$}] at (1, 0) {}; %2
+                    \node[label=right:{$b^{-1}$}] at (1.5, 0.73) {}; %3
+
+                    % Flechas
+                    \draw[->, thick] (0.5,0.73) ++(0, 0.01) -- ++(-0.01,-0.01); %1
+                    \draw[<-, thick] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
+                    \draw[<-, thick] (1.5,0.73) ++(0, -0.01) -- ++(-0.01,0.01); %3
+                \end{scope}
+            \end{tikzpicture}
+        \end{figure}
+        Podemos ahora rotar $w_1$ y $w_2$ obteniendo $w_1'=ba^{-1}c$ y $w_2'=c^{-1}b^{-1}a$.
+        \begin{figure}[H]
+            \centering
+            \begin{tikzpicture}
+                \shorthandoff{>}
+                
+                \begin{scope}[shift={(-2,0)}]
+                    % Triángulo
+                    \draw[thick] (1,1.5) -- (0,0); %1
+                    \draw[thick] (0,0) -- (2,0); %2
+                    \draw[thick] (2,0) -- (1,1.5); %3
+
+                    % Leyenda
+                    \node[label=left:{$b$}] at (0.5,0.73) {}; %1
+                    \node[label=below:{$a^{-1}$}] at (1, 0) {}; %2
+                    \node[label=right:{$c$}] at (1.5, 0.73) {}; %3
+
+                    % Flechas
+                    \draw[->, thick] (0.5,0.73) ++(0, 0.01) -- ++(-0.01,-0.01); %1
+                    \draw[<-, thick] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
+                    \draw[->, thick] (1.5,0.73) ++(0, -0.01) -- ++(-0.01,0.01); %3
+                \end{scope}
+
+                \begin{scope}[shift={(2,0)}]
+                    % Triángulo
+                    \draw[thick] (1,1.5) -- (0,0); %1
+                    \draw[thick] (0,0) -- (2,0); %2
+                    \draw[thick] (2,0) -- (1,1.5); %3
+
+                    % Leyenda
+                    \node[label=left:{$c^{-1}$}] at (0.5,0.73) {}; %1
+                    \node[label=below:{$b^{-1}$}] at (1, 0) {}; %2
+                    \node[label=right:{$a$}] at (1.5, 0.73) {}; %3
+
+                    % Flechas
+                    \draw[<-, thick] (0.5,0.73) ++(0, 0.01) -- ++(-0.01,-0.01); %1
+                    \draw[<-, thick] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
+                    \draw[->, thick] (1.5,0.73) ++(0, -0.01) -- ++(-0.01,0.01); %3
+                \end{scope}
+            \end{tikzpicture}
+        \end{figure}
+
+        Estamos ahora en condiciones de pegar ambos triángulos a través de $c$ obteniendo $w_0=ba^{-1}b^{-1}a$.
+
+        \begin{figure}[H]
+            \centering
+            \begin{tikzpicture}
+                \shorthandoff{>}
+                % Cuadrado
+                \draw[thick] (0,1.5) -- (0,0); %1
+                \draw[thick] (0,0) -- (1.5,0); %2
+                \draw[thick] (1.5,0) -- (1.5,1.5); %3
+                \draw[thick] (1.5,1.5) -- (0,1.5); %4
+
+                \draw[dashed] (0,1.5) -- (1.5,0);
 
                 % Leyenda
-                \node[label=left:{$a^{-1}$}] at (0.5,0.73) {}; %1
-                \node[label=below:{$c$}] at (1, 0) {}; %2
-                \node[label=right:{$b$}] at (1.5, 0.73) {}; %3
+                \node[label=left:{$b$}] at (0, 0.75) {}; %1
+                \node[label=below:{$a^{-1}$}] at (0.75, 0) {}; %2
+                \node[label=right:{$b^{-1}$}] at (1.5, 0.75) {}; %3
+                \node[label=above:{$a$}] at (0.75, 1.5) {}; %4
 
                 % Flechas
-                \draw[<-, thick] (0.5,0.73) ++(0, 0.01) -- ++(-0.01,-0.01); %1
-                \draw[->, thick] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
-                \draw[->, thick] (1.5,0.73) ++(0, -0.01) -- ++(-0.01,0.01); %3
-            \end{scope}
+                \draw[->, thick] (0,0.75) ++(0, 0.01) -- ++(0,-0.01); %1
+                \draw[<-, thick] (0.75,0) ++(-0.01,0) -- ++(0.01,0); %2
+                \draw[<-, thick] (1.5,0.75) ++(0, -0.01) -- ++(0,0.01); %3
+                \draw[->, thick] (0.75,1.5) ++(0.01, -0.01) -- ++(-0.01,0); %4
+            \end{tikzpicture}
+        \end{figure}
 
-            \begin{scope}[shift={(2,0)}]
-                % Triángulo
-                \draw[thick] (1,1.5) -- (0,0); %1
-                \draw[thick] (0,0) -- (2,0); %2
-                \draw[thick] (2,0) -- (1,1.5); %3
+        Con una última rotación obtenemos $w_0'=aba^{-1}b^{-1}$ que es fácil ver que se corresponde a un toro.
+
+        \begin{figure}[H]
+            \centering
+            \begin{tikzpicture}
+                \shorthandoff{>}
+                % Cuadrado
+                \draw[thick] (0,1.5) -- (0,0); %1
+                \draw[thick] (0,0) -- (1.5,0); %2
+                \draw[thick] (1.5,0) -- (1.5,1.5); %3
+                \draw[thick] (1.5,1.5) -- (0,1.5); %4
 
                 % Leyenda
-                \node[label=left:{$a$}] at (0.5,0.73) {}; %1
-                \node[label=below:{$c^{-1}$}] at (1, 0) {}; %2
-                \node[label=right:{$b^{-1}$}] at (1.5, 0.73) {}; %3
+                \node[label=left:{$a$}] at (0, 0.75) {}; %1
+                \node[label=below:{$b$}] at (0.75, 0) {}; %2
+                \node[label=right:{$a^{-1}$}] at (1.5, 0.75) {}; %3
+                \node[label=above:{$b^{-1}$}] at (0.75, 1.5) {}; %4
 
                 % Flechas
-                \draw[->, thick] (0.5,0.73) ++(0, 0.01) -- ++(-0.01,-0.01); %1
-                \draw[<-, thick] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
-                \draw[<-, thick] (1.5,0.73) ++(0, -0.01) -- ++(-0.01,0.01); %3
-            \end{scope}
-        \end{tikzpicture}
-    \end{figure}
-    Podemos ahora rotar $w_1$ y $w_2$ obteniendo $w_1'=ba^{-1}c$ y $w_2'=c^{-1}b^{-1}a$.
-    \begin{figure}[H]
-        \centering
-        \begin{tikzpicture}
-            \shorthandoff{>}
-            
-            \begin{scope}[shift={(-2,0)}]
-                % Triángulo
-                \draw[thick] (1,1.5) -- (0,0); %1
-                \draw[thick] (0,0) -- (2,0); %2
-                \draw[thick] (2,0) -- (1,1.5); %3
+                \draw[->, thick] (0,0.75) ++(0, 0.01) -- ++(0,-0.01); %1
+                \draw[->, thick] (0.75,0) ++(-0.01,0) -- ++(0.01,0); %2
+                \draw[<-, thick] (1.5,0.75) ++(0, -0.01) -- ++(0,0.01); %3
+                \draw[<-, thick] (0.75,1.5) ++(0.01, -0.01) -- ++(-0.01,0); %4
+            \end{tikzpicture}
+        \end{figure}
+        Obtenemos entonces $|\cc{P}|\equiv \bb{T}$.
 
-                % Leyenda
-                \node[label=left:{$b$}] at (0.5,0.73) {}; %1
-                \node[label=below:{$a^{-1}$}] at (1, 0) {}; %2
-                \node[label=right:{$c$}] at (1.5, 0.73) {}; %3
+        \item $\cc{P}=\{a,b\ ;aabb\}$. 
+        \begin{gather*}
+            aabb \sim abba \sim abc,\ c^{-1}ba \sim abc,\ a^{-1}b^{-1}c \sim cab,\ b^{-1}ca^{-1} \sim caca^{-1}
+        \end{gather*}
+        La expresión final es $caca^{-1}$ que corresponde a la botella de Klein.
 
-                % Flechas
-                \draw[->, thick] (0.5,0.73) ++(0, 0.01) -- ++(-0.01,-0.01); %1
-                \draw[<-, thick] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
-                \draw[->, thick] (1.5,0.73) ++(0, -0.01) -- ++(-0.01,0.01); %3
-            \end{scope}
-
-            \begin{scope}[shift={(2,0)}]
-                % Triángulo
-                \draw[thick] (1,1.5) -- (0,0); %1
-                \draw[thick] (0,0) -- (2,0); %2
-                \draw[thick] (2,0) -- (1,1.5); %3
-
-                % Leyenda
-                \node[label=left:{$c^{-1}$}] at (0.5,0.73) {}; %1
-                \node[label=below:{$b^{-1}$}] at (1, 0) {}; %2
-                \node[label=right:{$a$}] at (1.5, 0.73) {}; %3
-
-                % Flechas
-                \draw[<-, thick] (0.5,0.73) ++(0, 0.01) -- ++(-0.01,-0.01); %1
-                \draw[<-, thick] (1,0) ++(-0.01,0) -- ++(0.01,0); %2
-                \draw[->, thick] (1.5,0.73) ++(0, -0.01) -- ++(-0.01,0.01); %3
-            \end{scope}
-        \end{tikzpicture}
-    \end{figure}
-    Estamos ahora en condiciones de pegar ambos triángulos a través de $c$ obteniendo $w_0=ba^{-1}b^{-1}a$.
-
-    \begin{figure}[H]
-        \centering
-        \begin{tikzpicture}
-            \shorthandoff{>}
-            % Cuadrado
-            \draw[thick] (0,1.5) -- (0,0); %1
-            \draw[thick] (0,0) -- (1.5,0); %2
-            \draw[thick] (1.5,0) -- (1.5,1.5); %3
-            \draw[thick] (1.5,1.5) -- (0,1.5); %4
-
-            \draw[dashed] (0,1.5) -- (1.5,0);
-
-            % Leyenda
-            \node[label=left:{$b$}] at (0, 0.75) {}; %1
-            \node[label=below:{$a^{-1}$}] at (0.75, 0) {}; %2
-            \node[label=right:{$b^{-1}$}] at (1.5, 0.75) {}; %3
-            \node[label=above:{$a$}] at (0.75, 1.5) {}; %4
-
-            % Flechas
-            \draw[->, thick] (0,0.75) ++(0, 0.01) -- ++(0,-0.01); %1
-            \draw[<-, thick] (0.75,0) ++(-0.01,0) -- ++(0.01,0); %2
-            \draw[<-, thick] (1.5,0.75) ++(0, -0.01) -- ++(0,0.01); %3
-            \draw[->, thick] (0.75,1.5) ++(0.01, -0.01) -- ++(-0.01,0); %4
-        \end{tikzpicture}
-    \end{figure}
-
-    Con una última rotación obtenemos $w_0'=aba^{-1}b^{-1}$ que es fácil ver que se corresponde a un toro.
-
-    \begin{figure}[H]
-        \centering
-        \begin{tikzpicture}
-            \shorthandoff{>}
-            % Cuadrado
-            \draw[thick] (0,1.5) -- (0,0); %1
-            \draw[thick] (0,0) -- (1.5,0); %2
-            \draw[thick] (1.5,0) -- (1.5,1.5); %3
-            \draw[thick] (1.5,1.5) -- (0,1.5); %4
-
-            % Leyenda
-            \node[label=left:{$a$}] at (0, 0.75) {}; %1
-            \node[label=below:{$b$}] at (0.75, 0) {}; %2
-            \node[label=right:{$a^{-1}$}] at (1.5, 0.75) {}; %3
-            \node[label=above:{$b^{-1}$}] at (0.75, 1.5) {}; %4
-
-            % Flechas
-            \draw[->, thick] (0,0.75) ++(0, 0.01) -- ++(0,-0.01); %1
-            \draw[->, thick] (0.75,0) ++(-0.01,0) -- ++(0.01,0); %2
-            \draw[<-, thick] (1.5,0.75) ++(0, -0.01) -- ++(0,0.01); %3
-            \draw[<-, thick] (0.75,1.5) ++(0.01, -0.01) -- ++(-0.01,0); %4
-        \end{tikzpicture}
-    \end{figure}
-    Obtenemos entonces $|\cc{P}|\equiv \bb{T}$.
+        \item $\cc{P}=\{a,b\ ;aa^{-1}bb^{-1}\}$
+        \begin{gather*}
+            aa^{-1}bb \sim baa^{-1}b \sim bac,\ c^{-1}a^{-1}b \sim bac,\ b^{-1}ac \sim acb,\ b^{-1}ac \sim acac
+        \end{gather*}
+        Tenemos que $|\cc{P}|$ es el plano proyectivo $\bb{R}\bb{P}^2$.
+    \end{enumerate}   
 \end{ejemplo}
+
+\section{La clasificación de las superficies compactas}
+
+\begin{prop}
+    Sean $S_1$ y $S_2$ dos superficies compactas dadas respectivamente como $|\cc{P}_1|$ y $|\cc{P}_2|$ para las presentaciones 
+    \begin{gather*}
+        \cc{P}_1=\{a_1,...,a_n;w_1\}\ \ \text{ y } \ \ \cc{P}_2=\{b_1,...,b_2;w_2\}
+    \end{gather*}
+    donde cada presentación tiene una única expresión\footnote{esto implica que ambas son conexas}. Entonces $S_1\#S_2$ tiene como presentación 
+    \begin{gather*}
+        \cc{P}= \{a_1,...,a_n,b_1,...,b_k;w_1w_2\}
+    \end{gather*}
+\end{prop}
+
+\begin{coro}
+    Una presentación de 
+    \begin{enumerate}
+        \item la esfera es $aa^{-1}bb^{-1}$.
+        \item el plano proyectivo es $aa^{-1}bb$.
+        \item el $n$-toro o esfera de $n$ asas $\bb{T}_n$ es $a_1b_1a_1^{-1}b_1^{-1}a_2b_2a_2^{-1}b_2^{-1}...a_nb_na_n^{-1}b_n^{-1}$.
+        \item el $n$-plano proyectivo $\bb{R}\bb{P}_n^2$ es $a_1a_1a_2a_2...a_na_n$
+    \end{enumerate}
+    \begin{proof}
+        Los casos 1., 2. y 3. son claros (en el caso 3. se puede ver fácilmente usando la proposición anterior). Estudiemos el caso que nos queda. Sabemos que 
+        \begin{gather*}
+            \bb{R}\bb{P}_n^2 = \bb{R}\bb{P}^2\# \overset{(n)}{...}\# \bb{R}\bb{P}^2
+        \end{gather*}
+        Usamos que $\bb{R}\bb{P}^2$ tiene por presentación $bcbc$. Por la proposición anterior tenemos que una presentación de $\bb{R}\bb{P}_n^2$ es 
+        \begin{gather*}
+            b_1c_1b_1c_1b_2c_2b_2c_2...b_nc_nb_nc_n
+        \end{gather*}
+        Podemos consolidar y llamar $a_i=b_ic_i$ para todo $i\in \{1,...,n\}$ y tendríamos 
+        \begin{gather*}
+            b_1c_1b_1c_1b_2c_2b_2c_2...b_nc_nb_nc_n \sim a_1a_1a_2a_2...a_na_n
+        \end{gather*}
+    \end{proof}
+\end{coro}
+
+\begin{observacion}
+    Del ejemplo anterior y del corolario se deduce que 
+    \begin{gather*}
+        \bb{R}\bb{P}^2\#\bb{R}\bb{P}^2 = \bb{R}\bb{P}_2^2 \equiv \text{Botella de Klein}
+    \end{gather*}
+\end{observacion}
+
+Nuestro objetivo ahora es llegar a que si tenemos una superficie compacta y conexa $S$, entonces tenemos que 
+\begin{gather*}
+    S \overset{homeo.}{\cong} \left\{
+        \begin{array}{l}
+            \bb{S}^2\\
+            \bb{T}_n\\
+            \bb{R}\bb{P}^2_n
+        \end{array}
+    \right.
+\end{gather*}
+
 
 
